--- a/app/views/blogs/edit.html.haml
+++ b/app/views/blogs/edit.html.haml
@@ -105,7 +105,7 @@
   %fieldset.service.menu
     %ul.services
       %li.sina_weibo
-        .caption 同步到新浪微博
+        .caption 新浪微博
         - sina = @blog.sync_targets.detect {|t| SinaWeibo === t && t.status == :verified}
         %span.partial_anchor
           = render :partial => 'sync/target', :object => sina
