--- a/app/views/blogs/edit.html.haml
+++ b/app/views/blogs/edit.html.haml
@@ -9,7 +9,8 @@
     %li.template 模板
     %li.appearance{data: {widget: 'reloadAppearance', source: 'fieldset.template',
       target: 'fieldset.appearance'}} 调整界面
-    %li.service 服务
+    - if params[:alpha]
+      %li.service 服务
     %li.advanced 高级选项
   .customize_commands
     %a.button.save{href: "###", data: {widget: 'submit', form: '.edit_blog'}} 保 存
@@ -102,13 +103,14 @@
         %ul.assets
   %fieldset.appearance.menu{ data: {widget: "appearance"}}
     = render :partial => 'blogs/template_variables'
-  %fieldset.service.menu
-    %ul.services
-      %li.sina_weibo
-        .caption 新浪微博
-        - sina = @blog.sync_targets.detect {|t| SinaWeibo === t && t.status == :verified}
-        %span.partial_anchor
-          = render :partial => 'sync/target', :object => sina
+  - if params[:alpha]
+    %fieldset.service.menu
+      %ul.services
+        %li.sina_weibo
+          .caption 新浪微博
+          - sina = @blog.sync_targets.detect {|t| SinaWeibo === t && t.status == :verified}
+          %span.partial_anchor
+            = render :partial => 'sync/target', :object => sina
   %fieldset.advanced.menu
     .item.toggle_private
       = f.check_box :private
