sitemap: 5 random blogs

--- a/app/views/sitemap/index.html.haml
+++ b/app/views/sitemap/index.html.haml
@@ -30,3 +30,5 @@
       .text<
         宽岛组宽岛组宽岛组宽岛组宽岛组宽岛组
       .arrow
+#blog_list{style: "display:none"}
+  = render :partial => "blogs/avatar", :collection => @blogs, :as => :blog
