--- a/public/stylesheets/base.sass
+++ b/public/stylesheets/base.sass
@@ -276,6 +276,19 @@ a.logo
   .z_name
     word-wrap: break-word        
 
+.blog_image_16
+  width: 16px
+  .z_image
+    @include size(16px, 16px)
+    display: block
+    background-image: url('/images/default_icon_16.jpg')
+    background-repeat: no-repeat
+    background-position: center
+    a
+      @include size(16px, 16px)
+      display: block
+      text-decoration: none
+
 .latest h1
   margin: 30px 0px
   color: #009fff
