--- a/app/views/layouts/_header_common.html.haml
+++ b/app/views/layouts/_header_common.html.haml
@@ -6,16 +6,16 @@
         我的主页
       %span><
         |    
-    %a.z_wall{href: wall_posts_path}><
-      展示墙
-    %span><
-      |    
     %a.z_discovery{href: tags_path}><
-      标签墙
+      兴趣
     %span><
       |    
     %a.z_news{href: news_posts_path}><
-      随便看看
+      新鲜事儿
+    %span><
+      |    
+    %a.z_sitemap{href: sitemap_path}><
+      宽岛地图
     - if current_user
       %span><
         |    
