--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,32 +1,39 @@
-- @sub_title = "你的朋友#{@inv_user.name}邀请你参与测试"
-- @sub_title_class = "register_title"
+- @sub_title = "#{@inv_user.name} 邀请你上岛测试，发现真实的自己"
+- content_for :site_layout, "start_page registation_dom"
 
-= form_for(@user, :url => users_path, :html => {:class => 'register'}) do |f|
-  .nick_box
-    = f.label :name, '用户名'
-    = f.text_field :name
-  .error
-    &nbsp;
-    = @user.errors[:name].first
-  .email_box
-    = f.label :email, '邮箱'
-    = f.text_field :email
-  .error
-    &nbsp;
-    = @user.errors[:email].first
-  .password_box
-    = f.label :password, '密码'
-    = f.password_field :password
-  .error
-    &nbsp;
-    = @user.errors[:password].first
-  -# .password_box
-  -#   = f.label :password_confirmation, '确认密码'
-  -#   = f.password_field :password_confirmation
-  -# .error
-  -#   &nbsp;
-  -#   = @user.errors[:password_confirmation].first
-  = hidden_field_tag 'code', @inv_user.inv_code
-  = hidden_field_tag 'refer', request.referer
-  .submit_box
-    = f.submit "注册"
+- css "user"
+
+- content_for :content, do
+  .registation_logo
+  .registation_intro
+  .registation_title
+    %span.avatar{style: "background-image:url(#{@inv_user.primary_blog.icon.url_for(:medium)})"}<
+    %span.txt
+      = "#{@inv_user.name} 邀请你上岛测试，发现真实的自己"
+   
+  = form_for(@user, :url => users_path, :html => {:class => 'registation'}) do |f|
+    .item
+      .nick_box
+        = f.label :name, '用户名'
+        = f.text_field :name
+      .error
+        &nbsp;
+        = @user.errors[:name].first
+    .item
+      .email_box
+        = f.label :email, '邮箱'
+        = f.text_field :email
+      .error
+        &nbsp;
+        = @user.errors[:email].first
+    .item
+      .password_box
+        = f.label :password, '密码'
+        = f.password_field :password
+      .error
+        &nbsp;
+        = @user.errors[:password].first
+    = hidden_field_tag 'code', @inv_user.inv_code
+    = hidden_field_tag 'refer', request.referer
+    .submit_box
+      = f.submit "注册"
