--- a/public/stylesheets/user.sass
+++ b/public/stylesheets/user.sass
@@ -138,6 +138,7 @@
   .registation_title
     text-align: center
     margin-top: 10px
+    margin-bottom: 5px
     .avatar
       @include size(60px, 60px)
       display: inline-block
@@ -166,7 +167,7 @@
         line-height: 33px
         overflow: hidden
       &.nick_box input, &.email_box input, &.password_box input
-        width: 160px
+        width: 150px
         height: 28px
         line-height: 28px
     .submit_box input
