--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -36,3 +36,5 @@
     = hidden_field_tag 'refer', request.referer
     .submit_box
       = f.submit "注册"
+  .registation_txt
+    在宽岛上，你可以简单地发布清晰的图片，建立多个页面来展示你的个性和爱好，同和你有共同兴趣的人们认识并交流⋯⋯
