--- a/public/stylesheets/user.sass
+++ b/public/stylesheets/user.sass
@@ -174,3 +174,8 @@
       @include hide_text
       background: url('/images/embed/register_submit.gif')
       cursor: pointer
+  .registation_txt
+    font-size: 14px
+    text-align: center
+    color: gray
+    clear: both
