--- a/app/views/sync/_target.html.haml
+++ b/app/views/sync/_target.html.haml
@@ -2,10 +2,10 @@
   %span.account_name
     同步到
     = target.account
-  %a.sync_cancel{href: blog_path(@blog) + 'sync/sina_weibo',
+  %a.sync_cancel{href: blog_path(@blog) + "sync/#{target_name}",
     data: {widget: 'rest', md: 'delete', callback: 'replace',
     parent: 'partial_anchor'}}
     取消同步
 - else
-  %a.sync_apply{target: '_blank', href: blog_path(@blog) + 'sync_apply/sina_weibo'}
+  %a.sync_apply{target: '_blank', href: blog_path(@blog) + "sync_apply/#{target_name}"}
     &nbsp;&#8594; 绑定帐号
