--- a/public/stylesheets/blog.sass
+++ b/public/stylesheets/blog.sass
@@ -511,6 +511,9 @@ fieldset.appearance
   @include border-radius(8px)
   padding: 0.5em
 
+.services .first
+  margin-bottom: 0.5em
+
 .sina_weibo
   .caption
     background: url('/images/sina_24x24.png') no-repeat
