--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -34,6 +34,7 @@
         &nbsp;
         = @user.errors[:password].first
     = hidden_field_tag 'code', @inv_user.inv_code
+    = hidden_field_tag 'rand', @rand
     = hidden_field_tag 'refer', request.referer
     .submit_box
       = f.submit "注册"
