followers_count and posts_count for BlogView, fix #39

--- a/doc/templates/readme.html
+++ b/doc/templates/readme.html
@@ -120,6 +120,8 @@ section里：</p>
 <li>icon_30 30x30页面图标链接</li>
 <li>icon_24 24x24页面图标链接</li>
 <li>icon_16 16x16页面图标链接</li>
+<li>followers_count 页面关注者总数</li>
+<li>posts_count 页面帖子总数</li>
 </ul>
 
 
