Adjust notification text

--- a/app/views/sync/setup_success.html.haml
+++ b/app/views/sync/setup_success.html.haml
@@ -1,7 +1,7 @@
 !!! 5
 <meta charset='utf-8'>
 #type_anchor{data: {target: params[:target]}}
-  好像成功了
+  绑定成功
   :javascript
     setTimeout(function(){
       var opener = window.opener
