Don't expand theme picking panel that wide

--- a/public/stylesheets/blog.sass
+++ b/public/stylesheets/blog.sass
@@ -363,6 +363,9 @@ form.edit_blog
         background: #3366cc
         color: white
 
+  .picking_template
+    width: 750px
+
 .pool_field, .custom_field
   display: none
 
