--- a/public/stylesheets/lib.sass
+++ b/public/stylesheets/lib.sass
@@ -64,3 +64,9 @@ $slide-button-size: 18px
   font-weight: normal
   font-size: 30px
   color: $green
+
+@mixin fancy_text_input
+  @include border-radius(8px)
+  border: 1px solid #DDDDDD
+  padding: 8px 5px
+  font-size: 18px
