--- a/app/views/blogs/_advertising_bar.html.haml
+++ b/app/views/blogs/_advertising_bar.html.haml
@@ -24,7 +24,8 @@
   #kmon_register
     .title 注册宽岛，查看更多精彩内容......
     .body
-      = form_for :user do |f|
+      = form_for :user, url: "#{fucking_root}users" do |f|
+        %input{type: 'hidden', name: 'quick', value: 1}
         %input{type: 'hidden', name: 'code', value: @code}
         .field
           = f.label :email, '邮箱'
