--- a/app/views/blogs/_advertising_bar.html.haml
+++ b/app/views/blogs/_advertising_bar.html.haml
@@ -23,15 +23,19 @@
 %div{style: "display: none !important;"}
   #kmon_register
     .title 注册宽岛，查看更多精彩内容......
-    .body
+    .body{data: {widget: 'validatedForm'}}
       = form_for :user, url: "#{fucking_root}users" do |f|
         %input{type: 'hidden', name: 'quick', value: 1}
         %input{type: 'hidden', name: 'code', value: @code}
         .field
-          = f.label :email, '邮箱'
-          = f.text_field :email
+          .label
+            = f.label :email, '邮箱'
+            = f.email_field :email, 'data-type' => 'email'
+          .error{data: {displayErrorFor: 'user[email]'}}
         .field
-          = f.label :password, '密码'
-          = f.password_field :password
-        = f.submit class: 'submit'
+          .label
+            = f.label :password, '密码'
+            = f.password_field :password
+          .error{data: {displayErrorFor: 'user[password]'}}
+        = f.submit '注册', class: 'submit'
       %a.log_in{href: fucking_root} 有账户，登陆宽岛
