--- a/app/views/blogs/_advertising_bar.html.haml
+++ b/app/views/blogs/_advertising_bar.html.haml
@@ -17,12 +17,12 @@
   .kmon_inner
     .logo
     .slogan
-      精彩内容，尽在宽岛......
+      想看更多有趣的内容？
       %a.register{href: '#'}
-        立即注册
+        登上宽岛
 %div{style: "display: none !important;"}
   #kmon_register
-    .title 注册宽岛，查看更多精彩内容......
+    .title 注册宽岛，查看更多有趣内容......
     .body{data: {widget: 'validatedForm'}}
       = form_for :user, url: "#{fucking_root}users" do |f|
         %input{type: 'hidden', name: 'refer', value: blog_path(@blog)}
