--- a/app/views/blogs/_advertising_bar.html.haml
+++ b/app/views/blogs/_advertising_bar.html.haml
@@ -25,7 +25,7 @@
     .title 注册宽岛，查看更多有趣内容......
     .body{data: {widget: 'validatedForm'}}
       = form_for :user, url: "#{fucking_root}users" do |f|
-        %input{type: 'hidden', name: 'refer', value: blog_path(@blog)}
+        %input{type: 'hidden', name: 'refer', value: request.url}
         %input{type: 'hidden', name: 'code', value: @code}
         .field
           .label
