--- a/app/views/blogs/_advertising_bar.html.haml
+++ b/app/views/blogs/_advertising_bar.html.haml
@@ -26,6 +26,7 @@
     .body{data: {widget: 'validatedForm'}}
       = form_for :user, url: "#{fucking_root}users" do |f|
         %input{type: 'hidden', name: 'refer', value: request.url}
+        %input{type: 'hidden', name: 'redirect_back', value: 1}
         %input{type: 'hidden', name: 'code', value: @code}
         .field
           .label
