Just expose the url, closes #59

--- a/doc/templates/readme.html
+++ b/doc/templates/readme.html
@@ -122,6 +122,8 @@ section里：</p>
 <li>icon_16 16x16页面图标链接</li>
 <li>followers_count 页面关注者总数</li>
 <li>posts_count 页面帖子总数</li>
+<li>next_post_url 下一个（新的）帖子链接，仅在帖子单页上有效</li>
+<li>prev_post_url 上一个（旧的）帖子链接，仅在帖子单页上有效</li>
 </ul>
 
 
