--- a/public/stylesheets/category.sass
+++ b/public/stylesheets/category.sass
@@ -1,2 +1,14 @@
 @import 'lib'
 
+.top_box
+  width: 900px
+  height: 300px
+  overflow: hidden
+  .z_inner
+    width: 9999px
+    height: 300px
+  a
+    display: inline-block
+    img
+      width: 900px
+      height: 300px
