--- a/app/views/categories/manage.html.haml
+++ b/app/views/categories/manage.html.haml
@@ -1,8 +1,13 @@
 :css
   table {
     border-collapse: collapse; }
-    table td {
-      border: 1px solid lightgray; }
+    table td, table th {
+      border: 1px solid gray; }
+  .sub_table {
+    width: 100%; }
+    .sub_table td {
+      border: 1px dotted lightgray; }
+  }
 
 %h1 管理页
 
@@ -15,25 +20,34 @@
     %th 置顶
     %th
     %th
-    %th
-    %th
 
   - @categories.each do |category|
     %tr
       %td= category.order
       %td= category.name
       %td
-        - category.category_subs.each do |sub|
-          %a{href: blog_path(sub.blog), target: "_blank"}
-            = sub.blog.title
-          %a{href: "/categories/#{category.id}/category_subs/#{sub.id}/edit"}
-            编辑
-          %a{href: "/categories/#{category.id}/category_subs/#{sub.id}", data: {confirm: "确定删除?", method: :delete}}
-            X
-          %br
-      %td= category.new
-      %td= category.top
-      %td= link_to '添加博客', new_category_category_sub_path(category)
+        %table.sub_table
+          - category.category_subs.each do |sub|
+            %tr
+              %td{style: "width:300px"}
+                %a{href: blog_path(sub.blog), target: "_blank"}
+                  = sub.blog.title
+              %td{style: "width:60px"}
+                = "新" if sub.new?
+                |
+                = "顶" if sub.top?
+                |
+                = "图" unless sub.image.blank?
+              %td{style: "width:60px"}
+                %a{href: "/categories/#{category.id}/category_subs/#{sub.id}/edit"}
+                  编辑
+                %a{href: "/categories/#{category.id}/category_subs/#{sub.id}", data: {confirm: "确定删除?", method: :delete}}
+                  X
+          %tr
+            %td{colspan: 3, style: "text-align: right"}
+              = link_to '添加博客', new_category_category_sub_path(category)
+      %td= "是" if category.new?
+      %td= "是" if category.top?
       %td= link_to '编辑', edit_category_path(category)
       %td= link_to '删除', category, :confirm => '确定删除?', :method => :delete
 
